fix: atom btn => fix text align when icon is present

--- a/src/scss/_atoms.scss
+++ b/src/scss/_atoms.scss
@@ -257,6 +257,10 @@ a {
         [class^=icon]:before {
             padding-right: pas(m);
         }
+
+        @include screen(small) {
+            text-align: left;
+        }
     }
 
     @include screen(small) {
